# ChangeLog for xfce-extra/thunar-thumbnailers
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  20 Nov 2007; Christoph Mende <angelos@gentoo.org>
  thunar-thumbnailers-9999.ebuild:
  Changed USE=tetex to USE=latex and sync keywords

  14 Aug 2007; Christoph Mende <angelos@gentoo.org>
  thunar-thumbnailers-9999.ebuild:
  Dropped keywords for most archs until raw-thumbnailer is keyworded

  13 Aug 2007; Christoph Mende <angelos@gentoo.org>
  thunar-thumbnailers-9999.ebuild:
  Renamed dcraw to raw and added dependency on raw-thumbnailer

  13 Aug 2007; Christoph Mende <angelos@gentoo.org>
  thunar-thumbnailers-9999.ebuild:
  Added ~arm

  07 Jun 2007; Christoph Mende <angelos@gentoo.org>
  +thunar-thumbnailers-9999.ebuild:
  Initial import
