@@ -1,13 +1,13 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-EBUILD thunar-thumbnailers-9999.ebuild 925 RMD160 71945afebfb43698fa163187e5ab52031dcaff80 SHA1 360906a1d80ccc4ad027f77d9d43364bdf41de93 SHA256 02b6da8c983c3f3991839480997fa28a2773fbb860253d560a1747b696995150
-MISC ChangeLog 785 RMD160 4cbae743b97d820393730b951496e0d70286bd80 SHA1 19b8c835ccf865b3d644a9cbc12f0356233b4c5d SHA256 46e14dea32ac1d35c0403f8b85e729e18fb6b02ca22686f99017342337c936d1
+EBUILD thunar-thumbnailers-9999.ebuild 927 RMD160 b5d8a16b8a25d647e2dd656b5534b5fcba7b2b99 SHA1 6e5a1b5cc3667cf3fdee64dcd2d665bb4984c43f SHA256 11bbec9e8dc89786ca9ed6af056b4c528803366f1d84fa648836c4c4931c4d48
+MISC ChangeLog 906 RMD160 575d347fe76e3c1c318aed7509227fc6e28da682 SHA1 94db61fad6131e1917df68539ab324bdd390dc95 SHA256 4cb17210dbe99596f4df088ba87130a0d3b148bd888b658d7e252322885bf85d
 MISC metadata.xml 264 RMD160 9a5358647a179b8b8f5fe78a80a7466a653af579 SHA1 71cbbb68f2516f2c053abe3ee81a92287de35c7b SHA256 2cb8ccb75425405aeb49701963a799224b026657fb2d8204128efa9a0bf1e0f9
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.9 (GNU/Linux)
 
-iEYEARECAAYFAkkWJFMACgkQKhnDs22gwa/E+wCgnD6OLnyX1iV+FfNn8WuLfhye
-pggAnisoNNzeD8DpT7bg5R/cjeUF2ugn
-=yQ+A
+iEYEARECAAYFAkkhthYACgkQKhnDs22gwa+sfQCfWJ+BYu8vbtAmTZZ8IM8AEyb5
+8KAAoOBTnW1KHildumSmaLi7jRddWnc6
+=8tXH
 -----END PGP SIGNATURE-----
