@@ -1,6 +1,10 @@
 # ChangeLog for xfce-extra/thunar-thumbnailers
-# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  17 Nov 2008; Christoph Mende <angelos@gentoo.org>
+  thunar-thumbnailers-9999.ebuild:
+  Moved XFCE_CONFIG to pkg_setup
 
   20 Nov 2007; Christoph Mende <angelos@gentoo.org>
   thunar-thumbnailers-9999.ebuild:
